# supernote-task-service

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/supernote_task_service/: __init__.py  __main__.py  config.py  db.py  deps.py  encoding.py  errors.py  main.py  models.py  ratelimit.py  repository.py  security.py
src/supernote_task_service/routers/: health.py  lists.py  tasks.py
tests/: conftest.py  test_api.py  test_db.py  test_encoding.py  test_security_ratelimit.py
